Prueba de push desde VS Code

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -16,7 +16,7 @@
                     <i class="fas fa-heart"></i>
                 </div>
                 <ul class="nav-menu">
-                    <li><a href="#inicio" class="nav-link">Inici</a></li>
+                    <li><a href="#inicio" class="nav-link">Inicio</a></li>
                     <li><a href="#nosotros" class="nav-link">Nosotros</a></li>
                     <li><a href="#programas" class="nav-link">Programas</a></li>
                     <li><a href="#contacto" class="nav-link">Contacto</a></li>
