--- a/public_html/index.html
+++ b/public_html/index.html
@@ -16,6 +16,8 @@
 		
 		<!-- Latest Bootstrap min CSS -->
 		<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">	
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 		<!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500&display=swap" rel="stylesheet">		
 		<!-- Font Awesome CSS -->
@@ -215,112 +217,6 @@ h4 {
       background: linear-gradient(135deg, #FAA915, #0A9396);
     }
   }
-
-.atf-preloader-content {
-  text-align: center;
-  position: relative;
-  animation: fadeBounce 2s ease-in-out infinite;
-}
-
-/* Contenedor con halo */
-.preloader-logo-wrapper {
-  position: relative;
-  display: inline-block;
-  z-index: 2;
-}
-
-.preloader-logo-wrapper::after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 140%;
-  height: 140%;
-  background: radial-gradient(circle, rgba(235, 169, 0, 0.3) 0%, transparent 70%);
-  transform: translate(-50%, -50%);
-  border-radius: 50%;
-  animation: haloPulse 2.5s ease-in-out infinite;
-  z-index: 1;
-}
-
-/* Logo dentro del wrapper */
-.preloader-logo {
-  width: 120px;
-  max-width: 30vw;
-  animation: pulseLogo 2.5s ease-in-out infinite;
-  filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.3));
-  z-index: 2;
-  position: relative;
-}
-
-/* Texto del preloader */
-.preloader-text {
-  margin-top: 15px;
-  font-size: 20px;
-  font-weight: 600;
-  font-family: 'Poppins', sans-serif;
-  background: linear-gradient(90deg, #EBA900, #FAA915, #0A9396);
-  background-size: 200% auto;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  animation: textSlide 3s linear infinite;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
-}
-
-/* Animación logo */
-@keyframes pulseLogo {
-  0% {
-    transform: scale(1);
-    opacity: 0.9;
-  }
-  50% {
-    transform: scale(1.1) translateY(-6px);
-    opacity: 1;
-  }
-  100% {
-    transform: scale(1);
-    opacity: 0.9;
-  }
-}
-
-/* Animación halo */
-@keyframes haloPulse {
-  0% {
-    transform: translate(-50%, -50%) scale(1);
-    opacity: 0.6;
-  }
-  50% {
-    transform: translate(-50%, -50%) scale(1.2);
-    opacity: 0.3;
-  }
-  100% {
-    transform: translate(-50%, -50%) scale(1);
-    opacity: 0.6;
-  }
-}
-
-/* Animación texto */
-@keyframes textSlide {
-  0% {
-    background-position: 0% center;
-  }
-  100% {
-    background-position: 200% center;
-  }
-}
-
-/* Animación fade-in suave */
-@keyframes fadeInPage {
-  0% {
-    opacity: 0;
-    transform: translateY(10px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
 /* Aplicar al cargar la página */
 body.fade-in {
   animation: fadeInPage 1s ease-out forwards;
@@ -362,28 +258,119 @@ body.page-loaded footer {
   box-shadow: 0 0 0 0.2rem rgba(10, 147, 150, 0.25);
 }
 
+/* ----- ESTILO GENERAL ----- */
+.header-btn-group a {
+  transition: all 0.3s ease;
+}
+
+/* ----- DISEÑO MÓVIL (menos de 992px) ----- */
+@media (max-width: 991.98px) {
+  .header-btn-group {
+    flex-direction: column;
+    align-items: center;
+    padding-top: 1rem;
+  }
+
+  .header-btn-group a {
+    width: 100%;
+    max-width: 240px;
+    text-align: center;
+  }
+}
+
+/* ----- DISEÑO ESCRITORIO (992px o más) ----- */
+@media (min-width: 992px) {
+  .header-btn-group {
+    gap: 0.5rem;
+  }
+
+  .header-btn-group a {
+    white-space: nowrap;
+  }
+}
+
+/* ----- DISEÑO GENERAL DE LAS TARJETAS ----- */
+.menu-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.75rem 1.5rem;
+  border-radius: 2rem;
+  font-weight: 600;
+  text-decoration: none;
+  transition: all 0.3s ease;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+}
+
+/* Hover suave */
+.menu-card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.1);
+}
+
+/* ----- DISEÑO MÓVIL (INNOVADOR) ----- */
+@media (max-width: 991.98px) {
+  .header-mobile-panel {
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem 0;
+  }
+
+  .menu-card {
+    width: 90%;
+    max-width: 280px;
+    justify-content: center;
+    font-size: 1.1rem;
+  }
+}
+
+/* ----- DISEÑO DESKTOP (LIMPIO Y FUNCIONAL) ----- */
+@media (min-width: 992px) {
+  .header-mobile-panel {
+    gap: 0.75rem;
+  }
+
+  .menu-card {
+    font-size: 0.9rem;
+    padding: 0.5rem 1.25rem;
+    border-radius: 999px;
+  }
+}
+
+@media (max-width: 991.98px) {
+  #mainNavbar {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+    margin-top: 15px;
+  }
+
+  .btn-close {
+    position: absolute;
+    top: 15px;
+    right: 20px;
+  }
+
+  .menu-card {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 600;
+  }
+}
+
+.nav-link.active {
+  color: #0A9396 !important;
+  font-weight: bold;
+}
 
 
 </style>
-
 	</head>
-
-
-
 	<body>
-
 		<!-- Page Wrapper -->
 		<div class="page-wrapper">
-		
-			<!-- START PRELOADER -->
-			<div class="atf-status" id="preloader">
-			<div class="atf-preloader-content">
-				<img src="assets/img/logo.png" alt="Cargando..." class="preloader-logo" />
-				<p class="preloader-text">Cargando web...</p>
-			</div>
-			</div>
-
-
 			 <!--  END PRELOADER -->
 			 
 			<!-- START back-to-top -->	
@@ -393,39 +380,57 @@ body.page-loaded footer {
 			<!-- END back-to-top-->	
 		
 			<!-- Start Header Section -->
-<header class="atf-site-header atf-style1 atf-sticky-header">
-  <div class="atf-main-header">
-    <div class="container">
-      <div class="atf-main-header-in d-flex justify-content-between align-items-center">
+<header class="atf-site-header atf-style1 atf-sticky-header bg-white shadow-sm position-relative z-3">
+  <nav class="navbar navbar-expand-lg navbar-light container py-2">
 
-        <!-- LOGO -->
-        <div class="atf-main-header-start">
-          <a class="atf-site-branding atf-white-logo" href="index.html">
-		<a href="index.html">
-		<img src="assets/img/logo.png" alt="Logo" style="max-height: 100px; width: auto;">
-		</a>
+    <!-- LOGO -->
+    <a class="navbar-brand d-flex align-items-center" href="index.html">
+      <img src="assets/img/logo.png" alt="Logo" style="max-height: 60px; width: auto;">
+    </a>
 
-          </a>
-        </div>
+    <!-- Botón hamburguesa -->
+    <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar"
+      aria-controls="mainNavbar" aria-expanded="false" aria-label="Abrir menú">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-        <!-- BOTONES -->
-        <div class="atf-header-buttons d-flex align-items-center gap-3">
-          <a class="atf-themes-btn" href="https://wa.me/56912345678" target="_blank">
-            <span>WhatsApp</span>
-          </a>
-          <a class="atf-themes-btn" href="#donar">
-            <span>Donar</span>
-          </a>
-        </div>
+    <!-- Menú colapsable -->
+    <div class="collapse navbar-collapse justify-content-end" id="mainNavbar">
+      <!-- Botón de cerrar (solo visible en móvil) -->
+      <button type="button" class="btn-close d-lg-none ms-auto mb-3" aria-label="Cerrar menú" data-bs-toggle="collapse" data-bs-target="#mainNavbar"></button>
 
+      <!-- Opciones de navegación -->
+      <ul class="navbar-nav mb-2 mb-lg-0 align-items-lg-center gap-lg-3 text-center text-lg-start">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#proyectos">Proyectos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contacto">Contacto</a>
+        </li>
+      </ul>
+
+      <!-- Botones especiales -->
+      <div class="d-flex flex-column flex-lg-row align-items-center gap-3 pt-3 pt-lg-0">
+        <a href="https://wa.me/56912345678" target="_blank" class="menu-card bg-success text-white px-3 py-2 rounded">
+          <i class="fab fa-whatsapp fa-lg me-2"></i> WhatsApp
+        </a>
+        <a href="#donar" class="menu-card bg-warning text-dark px-3 py-2 rounded">
+          <i class="fas fa-hand-holding-heart fa-lg me-2"></i> Donar
+        </a>
       </div>
     </div>
-  </div>
+
+  </nav>
 </header>
 
-			<!-- End Header Section -->
-			
-			
+
+
+
+
+
 			<!-- START HOME -->
 	<section id="home" class="atf-hero-area-style1 atf-clip-area atf-align-items-details">
 	<div class="container">
@@ -1186,6 +1191,7 @@ body.page-loaded footer {
 		<script src="assets/js/jquery.min.js"></script>
 		<!-- Latest compiled and minified Bootstrap -->
 		<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 		<!-- owl-carousel min js  -->
 		<script src="assets/owlcarousel/js/owl.carousel.min.js"></script>
 		<!-- Counter js -->
@@ -1205,33 +1211,16 @@ body.page-loaded footer {
 		<script src="assets/js/form-contact.js"></script>
 		<!-- main js -->
 		<script src="assets/js/main.js"></script>	
-<script>
-window.addEventListener('load', function () {
-  const preloader = document.querySelector('.atf-status');
-  if (preloader) {
-    preloader.classList.add('fade-out');
-    setTimeout(() => {
-      preloader.style.display = 'none';
-    }, 2500); // ahora dura 2.5 segundos
-  }
-});
 
-</script>
-
-<script>
-  window.addEventListener('load', function () {
-    const preloader = document.querySelector('.atf-status');
-
-    if (preloader) {
-      preloader.classList.add('fade-out');
-      setTimeout(() => {
-        preloader.style.display = 'none';
-        document.body.classList.add('page-loaded'); // <-- Aquí ocurre la magia
-      }, 1200); // asegúrate de que coincida con la duración del fade-out
+    <script>
+  // Resalta el link del menú actual automáticamente
+  const navLinks = document.querySelectorAll('.nav-link');
+  navLinks.forEach(link => {
+    if (link.href === window.location.href) {
+      link.classList.add('active');
     }
   });
 </script>
-
 
 	</body>
 </html>
